<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/linearLayout">

    <EditText
        android:id="@+id/group_id_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:ems="10"
        android:gravity="center"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="@string/group_id"
        app:layout_constraintBottom_toTopOf="@+id/find_group"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/create_group"
        android:layout_width="184dp"
        android:layout_height="52dp"
        android:layout_marginBottom="52dp"
        android:text="@string/create_group"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/find_group"
        android:layout_width="128dp"
        android:layout_height="52dp"
        android:layout_marginBottom="52dp"
        android:text="@string/find_group"
        app:layout_constraintBottom_toTopOf="@+id/create_group"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.988"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="411dp" />

</androidx.constraintlayout.widget.ConstraintLayout>