<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/entry_image_view"
        android:layout_width="315dp"
        android:layout_height="316dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:color/background_dark" />

    <TextView
        android:id="@+id/entry_title_view"
        android:layout_width="312dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/name_amount"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/entry_image_view" />

    <TextView
        android:id="@+id/entry_date_view"
        android:layout_width="312dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/_10_24_2019"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/entry_title_view" />

    <TextView
        android:id="@+id/entry_description_view"
        android:layout_width="312dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/description"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/entry_date_view" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/shares_recycler_view"
        android:layout_width="312dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/entry_description_view" />

</androidx.constraintlayout.widget.ConstraintLayout>